Value comparison responsive spacing fix

--- a/frontend/src/styles/components/builder/_Modifiers.scss
+++ b/frontend/src/styles/components/builder/_Modifiers.scss
@@ -41,7 +41,11 @@
 }
 
 .modifier-dropdown-short {
-  width: 150px;
+  width: 120px;
+
+  @include respond-to('1439px') {
+    width: 90px;
+  }
 }
 
 .modifier-dropdown-wide {
